Server Unit Tests
* Introduced a Base InputHandler test class to handle the common setup and have useful helper functions
* Put a timeout on a TextMessageIntegrationTest such that it can be cancelled if it takes too long
* Put a todo with link to the trello task that will fix the username vulnerability
* Removed dependency only used for testing and implemented a helper function that provides the needed test functionality